welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:23: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
for (i<- 1 to 4 ) { faireV()}
                          ^